bk_ida/gccida/g2/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2345:6: error: use of undeclared identifier 'v17'
rtx *v17; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2351:6: error: use of undeclared identifier 'v23'
rtx *v23; // r13 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2358:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2358:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2365:4: error: expected ';' after expression
rtx v37; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2365:5: error: use of undeclared identifier 'v37'
rtx v37; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2367:6: error: use of undeclared identifier 'v39'
rtx *v39; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2372:6: error: use of undeclared identifier 'v44'
rtx *v44; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2373:7: error: use of undeclared identifier 'v45'; did you mean 'v15'?
rtx **v45; // r12 
      ^~~
      v15
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2343:7: note: 'v15' declared here
void *v15; // rsp 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2373:5: error: invalid operands to binary expression ('struct rtx_def *' and 'void')
rtx **v45; // r12 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2378:6: error: use of undeclared identifier 'v50'
rtx *v50; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2381:4: error: expected ';' after expression
rtx v53; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2381:5: error: use of undeclared identifier 'v53'
rtx v53; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2383:6: error: use of undeclared identifier 'v55'
rtx *v55; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2392:4: error: expected ';' after expression
rtx v64; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2392:5: error: use of undeclared identifier 'v64'
rtx v64; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2398:4: error: expected ';' after expression
rtx v70; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2398:5: error: use of undeclared identifier 'v70'
rtx v70; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/reg-stack.c:2404:4: error: expected ';' after expression
rtx v76; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
